2015-07-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/module.c (ModuleAliases): Add a module alias for GRAYA.

2015-07-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/montage.c (MontageImages): Fix Coverity 101317 "Resource
	leak".

	* magick/blob.c: Limit the data size passed to the read/write
	calls to the filesystem blocksize and make multiple calls if
	required.

	* magick/pixel_cache.c: Limit the data size passed to the
	read/write, pread/prwite calls and make multiple calls if
	required.

2015-07-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (WriteBlobFile): Properly handle short read. Read
	data in units of filesystem block size.
	(BlobToFile): Write data in units of filesystem block size.

	* patches: Added directory of patches which may be useful when
	integrating new versions of 3rd-party programs or libraries into
	the VisualMagick build.

	* libxml: Re-applied libxml changes which were used in prior
	release.

2015-07-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* webp: Updated bundled libwebp to release 0.4.3.

	* ttf: Update bundled freetype to release 2.6.

	* libxml: Update bundled libxml2 to release 2.9.2.

	* tiff/VERSION: Update bundled libtiff to release 4.0.4.

	* magick/nt_base.h (HAVE_TIFFISCODECCONFIGURED): Enable use of
	TIFFIsCODECConfigured in MSVC build.

	* coders/tiff.c: I am too lazy to modify VisualMagick configure so
	it is possible to include jpeglib.h in tiff.c, so block out this
	low-value code just for MSVC builds.

2015-06-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac, magick/profile.c: Removed support for lcms 1.X.
	No one should be using a lesser version than lcms 2.0.

2015-06-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (DisassociateBlob): Applied patch by Dirk Lemstra
	to assure that the image blob is no longer shared with other
	images when the image is written. This helps with thread safety.
