@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020150707"
-#define public MagickPackageReleaseDate "snapshot-20150707"
+#define public MagickPackageVersionAddendum ".020150711"
+#define public MagickPackageReleaseDate "snapshot-20150711"
